public/stylesheets/glyphs.css
/* ... */
.c-glyph-set-save-setting-button {
  width: 12.5rem;
  height: 2.5rem;
  font-size: 0.9rem;
  font-family: Typewriter, serif;
  font-weight: bold;
  background-color: black;
  color: var(--color-reality-light);
  border: 0.2rem solid var(--color-reality);
  border-radius: 0.5rem;
  margin: 0 0.4rem 1rem;
  transition-duration: 0.2s;
  cursor: pointer;
}

.s-base--metro .c-glyph-set-save-setting-button {
  border-width: 0.1rem;
  border-radius: 0;
}

.c-glyph-set-save-setting-button:hover {
  background-color: var(--color-reality-light);
  color: black;
}

.c-glyph-set-save-setting-button--disabled {
  cursor: default;
}

.c-glyph-set-save-setting-button--disabled:hover {
  background-color: black;
  color: var(--color-reality-light);
}

.c-glyph-set-save-button {
  height: 2.5rem;
  color: var(--color-reality-light);
  background-color: black;
  border: 0.2rem solid var(--color-reality);
  border-radius: 0.5rem;
  cursor: pointer;
  transition-duration: 0.2s;
  text-align: center;
  font-size: 1rem;
  font-weight: bold;
  font-family: Typewriter, serif;
}

.c-glyph-set-save-button:hover {
  color: black;
  background-color: var(--color-reality-light);
}

.s-base--metro .c-glyph-set-save-button {
  border-width: 0.1rem;
  border-radius: 0;
}

.c-glyph-set-save-button--unavailable {
  color: var(--color-bad);
  border-color: var(--color-bad);
  cursor: default;
}

.c-glyph-set-save-button--unavailable:hover {
  color: var(--color-bad);
  background: black;
}

.l-glyph-set-save-spacing {
  height: 6rem;
  display: flex;
  flex-direction: column;
  place-content: flex-end;
}

.c-current-glyph-effects__effect--capped {
  font-style: italic;
}

.l-current-glyph-effects__capped-header {
  margin-bottom: 1em;
}

.l-current-glyph-effects {
  overflow-x: hidden;
  overflow-y: scroll;
  height: initial;

  /* Moz styling for scrolbar */
  scrollbar-color: #08450b #00000000;
  scrollbar-width: thin;
}

.l-current-glyph-effects::-webkit-scrollbar {
  width: 0.8rem;
}

.l-current-glyph-effects::-webkit-scrollbar-thumb {
  background: #08450b;
}

.c-current-glyph-effects {
  margin-top: 0;
  margin-bottom: 0;
  height: 30rem;
  width: 45rem;
  overflow: auto;
  color: var(--color-reality-light);
  background: black;
  border: 0.2rem solid var(--color-reality);
  border-radius: 0.5rem;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  padding: 0.8rem 0.8rem 0.5rem;
  position: relative;
}

.c-current-glyph-effects-with-top-border {
  border-radius: 0.5rem;
}

.pelle-current-glyph-effects {
  color: var(--color-pelle--base);
}

.c-glyph-tooltip .pelle-current-glyph-effects {
  color: var(--color-pelle--base);
  font-weight: bold;
}

.s-base--metro .c-current-glyph-effects {
  border-radius: 0;
  border-width: 0.1rem;
}

.t-s8 .c-current-glyph-effects {
  border-color: black;
}

.c-current-glyph-effects__header {
  font-weight: bold;
  font-size: 1.2rem;
}

.l-equipped-glyphs-and-effects-container {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  width: 65rem;
}

.l-glyph-info-wrapper {
  display: flex;
  flex-direction: column;
}

.t-s6 .l-glyph-info-wrapper,
.t-s10 .l-glyph-info-wrapper {
  background-color: black;
}

.c-glyph-info-options {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 2.8rem;
  width: 100%;
}

.s-base--metro .c-glyph-info-options {
  border-radius: 0;
}

.t-s8 .c-glyph-info-options {
  border-color: black;
}

.c-glyph-info-button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  cursor: pointer;
  background-color: black;
  border: 0.2rem solid var(--color-reality);
  border-radius: 0.5rem 0.5rem 0 0;
  color: var(--color-reality-light);
  transition: all 0.2s, border-bottom 0ms, padding-bottom 0ms;
  text-align: center;
  font-size: 1.2rem;
  font-family: Typewriter;
  font-weight: bold;
  z-index: 1;
}

.t-s8 .c-glyph-info-button {
  border-color: black !important;
}

.l-glyph-info-button {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 22rem;
  height: 3rem;
}

.s-base--metro .c-glyph-info-button {
  border-radius: 0;
  border-width: 0.1rem;
  height: 2.9rem;
}

.c-glyph-info-button--active {
  border-bottom: none;
  cursor: default;
  padding-bottom: 0.3rem;
  transition-duration: 0ms;
}

.c-glyph-info-button--inactive:hover {
  color: black;
  background-color: var(--color-reality-light);
}

.l-sacrificed-glyphs {
  margin-top: 1rem;
}

.c-glyph-peek {
  border: 0.1rem solid #b8b8b8;
  border-radius: 0.5rem;
  padding: 1rem;
  height: 9rem;
  width: calc(100% - 1rem);
}

.c-glyph-choice-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 74rem;
}

.c-glyph-choice-single-glyph {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 0.5rem;
  margin: 0.5rem;
  height: 12rem;
  width: 36rem;
}

.c-glyph-choice-icon {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.1);
  border: 0.2rem solid rgba(0, 0, 0, 0.15);
  border-radius: 0.5rem;
  font-size: 1.2rem;
  height: 10rem;
  width: 10rem;
  text-shadow: 0.1rem 0.1rem 0.1rem black, 0.1rem 0.1rem 0 black;
  box-shadow: 0.3rem 0.3rem 0.3rem rgba(0, 0, 0, 0.5);
}

.s-base--metro .c-glyph-choice-icon {
  border-radius: 0;
  border-width: 0.1rem;
}

.c-glyph-choice-effect-list {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  background-color: rgba(0, 0, 0, 0.1);
  border: 0.2rem solid rgba(0, 0, 0, 0.15);
  border-radius: 0.5rem;
  height: 11rem;
  width: 25rem;
}

.s-base--metro .c-glyph-choice-effect-list {
  border-radius: 0;
  border-width: 0.1rem;
}

.s-base--metro .c-glyph-peek {
  border-radius: 0;
}

.t-s8 .c-glyph-peek {
  border-color: black;
}

.c-sacrificed-glyphs--dragover {
  border-color: rgb(0, 0, 0);
  box-shadow: 0 0 0.1rem 0.1rem  rgb(0, 0, 0);
}
/* ... */

